--- a/app/src/main/res/values/whats_new.xml
+++ b/app/src/main/res/values/whats_new.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="changes_4_6_8">- Búsqueda semántica de entidades por productos o servicios (para más información abre el filtro en el icono de la lupa)\n- Añadida información de categorías de entidades\n- Mejorada la velocidad en la carga de entidades\n- Se añade esta misma ventana de información si hay novedades importantes en una nueva versión de la app</string>
+    <string name="changes_4_7_4">- Búsqueda semántica de entidades por productos o servicios (para más información abre el filtro en el icono de la lupa)
+        \n- Añadida información de categorías de entidades
+        \n- Mejorada la velocidad en la carga de entidades
+        \n- Se añade esta misma ventana de información si hay novedades importantes en una nueva versión de la app
+        \n- Adaptación del diseño "borde a borde" para teléfonos con últimas versiones de Android
+    </string>
 
 </resources>
